--- a/css/main.scss
+++ b/css/main.scss
@@ -1,62 +1,5 @@
-:root{
-    --darkBlue: hsl(233, 26%, 24%);
-    --limeGreen: hsl(136, 65%, 51%);
-    --brightCyan: hsl(192, 70%, 51%);
-    --grayishBlue: hsl(233, 8%, 62%);
-    --lightGrayish: hsl(220, 16%, 96%);
-    --veryLight: hsl(0, 0%, 98%);
-    --white: hsl(0, 0%, 100%);
-}
-*{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-}
-html {
-    font-size: 62.5%;
-}
-body{
-    font-family: 'Public Sans', sans-serif;
-    font-size: 1.6rem;
-    font-weight: 300;
-    font-size: 1.8rem;
-}
+@import "components/globals";
+@import "components/header";
+@import "components/hero";
+@import "components/features";
 
-.phones{
-    background-image: url(../images/bg-intro-mobile.svg);
-    display: inline-block;
-    width: 100px;
-    height: 200px
-}
-
-.wrapper{
-    padding: 0 20px;
-}
-.hero{
-    // border: 2px solid blue;
-    width: 100%;
-    height: auto;
-    text-align: center;
-
-    &__tittle{
-        font-size: 3.5rem;
-        margin: 16px;
-        font-weight: 500;
-        color: var(--darkBlue);
-    }
-    &__text{
-        font-size: 1.4rem;
-        margin-bottom: 40px;
-        line-height: 2.5rem;
-        color: var(--grayishBlue);
-    }
-.button{
-    padding: 12px 30px;
-    font-size: 1.4rem;
-    border-radius: 18px;
-    background-image: linear-gradient(to right, var(--limeGreen) 0%, var(--brightCyan) 100%);
-    color: white;
-    text-decoration: none;
-    font-weight: 400;
-}
-}
