--- a/css/main.scss
+++ b/css/main.scss
@@ -2,4 +2,5 @@
 @import "components/header";
 @import "components/hero";
 @import "components/features";
-
+@import "components/articules";
+@import "components/footers";
