footer finished and width screen 375px done

--- a/css/components/_articules.scss
+++ b/css/components/_articules.scss
@@ -27,6 +27,7 @@
             height: 200px;
             margin: 0 auto;
             background-size: cover;
+            border-radius: 10px 10px 0px 0px;
         }
         .box-content{
             background-color: var(--white);
